//------------------------------------------------------------------------------
// File: Group.proto
// Author: Fabio Luchetti - CERN
//------------------------------------------------------------------------------

syntax="proto3";
package eos.console;

message GroupProto {

  message LsProto {
    uint64 outdepth       = 1; // [-g]
    bool outhost          = 2; // [-b]
    enum OutFormat {
      NONE                  = 0; //
      MONITORING            = 1; // [-m]
      LISTING               = 2; // [-l]
      IOGROUP               = 3; // [--io]
      IOFS                  = 4; // [--IO]
    }
    OutFormat outformat   = 3; //
    string selection      = 4; // [<groups>]
    bool dont_color       = 5;
  }

  message RmProto {
    string group = 1;
  }

  message SetProto {
    string group       = 1;
    string group_state = 2;
  }

  oneof subcmd {
    LsProto ls    = 1;
    RmProto rm    = 2;
    SetProto set  = 3;
  }

}
