//------------------------------------------------------------------------------
// File: Quota.proto
// Author: Fabio Luchetti - CERN
//------------------------------------------------------------------------------

syntax="proto3";
package eos.console;

message QuotaProto {

  message LsuserProto {
    string space = 1;
    bool format = 2;
  }

  message LsProto {
    string uid = 1;
    string gid = 2;
    string space = 3;
    bool format = 4;
    bool printid = 5;
    bool exists = 6;
    bool quotanode = 7;
  }

  message SetProto {
    string uid = 1;
    string gid = 2;
    string space = 3;
    string maxbytes = 4;
    string maxinodes = 5;
  }

  message RmProto {
    string uid   = 1;
    string gid   = 2;
    string space = 3;
    enum Type {
      NONE   = 0;
      VOLUME = 1;
      INODE  = 2; 
    }
    Type type    = 4;
  }

  message RmnodeProto {
    string space = 1;
  }


  oneof subcmd {
    LsuserProto lsuser = 1;
    LsProto ls         = 2;
    SetProto set       = 3;
    RmProto rm         = 4;
    RmnodeProto rmnode = 5;
  }

}
